Refactor site settings logic